update market, about
zilis, nu skin, others i think. fixed about pg footer

--- a/1-1_team.html
+++ b/1-1_team.html
@@ -155,22 +155,22 @@ and memorable way.</h4>
   <br>
 
   <footer>
-    <h3>
-  HAUTE HOUSE STUDIO</h3>
-  <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
-    <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
+    <h3>HAUTE HOUSE STUDIO</h3>
+    <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
+      <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
     <div class="row">
       <div class="column">
-          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+        <p><a href="mailto:hello@hautehousestudio.com" style="color:white;">hello@hautehousestudio.com</a>
           <br>(612) 730-1143
-          <br> Hours by appointment
+          <br>Hours by appointment</p>
       </div>
       <div class="column">
-          5500 Lincoln Drive
+        <p>5500 Lincoln Drive
           <br>Suite 150
-          <br>Edina, MN 55436
+          <br>Edina, MN 55436</p>
       </div>
-  </div></footer>
+    </div>
+  </footer>
 
   <script>
   function myFunction() {
