--- a/2_market.html
+++ b/2_market.html
@@ -126,6 +126,9 @@
         <br>
         <h3><a href="#nd">Noonday Collection</a></h3>
         <p>Jewelry and accessories handmade by artisans around the world.</p>
+        <br>
+        <h3><a href="#cbd">Lady of Ways</a></h3>
+        <p>Beautiful handmade, 3D tags to brighten all you gifts this holiday season.</p>
 
     </div>
 
@@ -148,6 +151,9 @@
         <br>
         <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
         <p>Fun, sassy, global treasures.</p>
+        <br>
+        <h3><a href="#cbd">Zilis CBD</a></h3>
+        <p>Superior bioavailability in a full spectrum of hemp oil.</p>
 
 <br>
 
@@ -186,6 +192,9 @@
       <br>
       <h3><a href="#mnbfg">MN Brands for Good</a></h3>
       <p>Best-selling locally made products at price points for everyone.</p>
+      <br>
+      <h3><a href="#cbd">Lady of Ways</a></h3>
+      <p>Beautiful handmade, 3D tags to brighten all you gifts this holiday season.</p>
 
   </div>
 
@@ -205,6 +214,8 @@
       <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
       <p>Fun, sassy, global treasures.</p>
       <br>
+      <h3><a href="#cbd">Zilis CBD</a></h3>
+      <p>Superior bioavailability in a full spectrum of hemp oil.</p>
   </div>
 
 </div>
@@ -213,6 +224,7 @@
 </div>
 </div>
 
+<br>
 <br>
 
 <div class="w3-container">
@@ -239,7 +251,7 @@
     <a name="hhs">
     <h3>Haute House Studio</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/hhs.png" style="border: none;"></div>
-      <div class="rightcolumnvendor"><p>Haute House Studio is a boutique floral & event studio located in
+      <div class="rightcolumnvendor"><p class="left">Haute House Studio is a boutique floral & event studio located in
         Edina, Minnesota. We are known for our energy, enthusiasm, creativity, and attention
         to detail. We connect with our clients on a personal level, understand your vision, and then
         bring that vision to life in an amazing and memorable way. Our goal is to inspire and celebrate
@@ -257,7 +269,7 @@
     <a name="alice">
     <h3>ALICE</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/alice.png"></div>
-      <div class="rightcolumnvendor"><p>ALICE bags are created for you to channel your inner confidence and strength
+      <div class="rightcolumnvendor"><p class="left">ALICE bags are created for you to channel your inner confidence and strength
         while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</p>
         <p><a href="https://www.instagram.com/shopalicebags/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
           <a href="https://www.facebook.com/Shopalicebags-981258342264499/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
@@ -271,7 +283,7 @@
     <a name="cc">
     <h3>CurioCities</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.jpg" style="border: none;"></div>
-      <div class="rightcolumnvendor"><p>Our mission is to be the industry leader in socially-conscious,
+      <div class="rightcolumnvendor"><p class="left">Our mission is to be the industry leader in socially-conscious,
         high-quality, handcrafted jewelry at an affordable price. Style should also have value. We believe
         every woman should feel confident and empowered with our accessory collection at her fingertips.</p>
         <p><a href="https://www.instagram.com/curiocitiesllc/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
@@ -285,9 +297,9 @@
 <div class="row">
   <a name="cute">
   <h3>Cute &amp; Delish by Kel</h3>
-    <div class="leftcolumnvendor"><img src="photos_mktlogos/cuteanddelish.jpg"></div>
-    <div class="rightcolumnvendor"><p>I did not choose to be a stay at home mom; it chose me. My son Dempsey, was born in 2014 with Cerebral Palsy and Achondroplasia(dwarfism). Because of these conditions Dempsey could not attend daycare, and I quit teaching preschool to care for him. Due to illness and health complications, Dempsey was in and out of the hospital for the first year of life. Then and now, our days are filled with doctor appointments and physical and occupational therapy. Dempsey has made unbelievable gains and amazed all of his specialists. I love devoting all of my time to help Dempsey’s development.</p>
-<p>Dempsey is now three, goes to school two days a week, and (drumroll please) has started walking in his walker. Our days are spent putting him through his “workouts,” reading, playing with his little brother, Dom, and working on eating. Dempsey’s progress has allowed him to become more independent, which has afforded me more free time.  A year ago, my aunt Terrie taught me how to bake and decorate the exceptional cookies I now create. As I have honed my skills, I have developed a passion for crafting personalized cookies for others. I love having another passion other than my kids. I have so much fun creating and decorating cute and delicious cookies. </p>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/cuteanddelish.jpg" style="border: none;"></div>
+    <div class="rightcolumnvendor"><p class="left">I did not choose to be a stay at home mom; it chose me. My son Dempsey, was born in 2014 with Cerebral Palsy and Achondroplasia(dwarfism). Because of these conditions Dempsey could not attend daycare, and I quit teaching preschool to care for him. Due to illness and health complications, Dempsey was in and out of the hospital for the first year of life. Then and now, our days are filled with doctor appointments and physical and occupational therapy. Dempsey has made unbelievable gains and amazed all of his specialists. I love devoting all of my time to help Dempsey’s development.</p>
+<p class="left">Dempsey is now three, goes to school two days a week, and (drumroll please) has started walking in his walker. Our days are spent putting him through his “workouts,” reading, playing with his little brother, Dom, and working on eating. Dempsey’s progress has allowed him to become more independent, which has afforded me more free time.  A year ago, my aunt Terrie taught me how to bake and decorate the exceptional cookies I now create. As I have honed my skills, I have developed a passion for crafting personalized cookies for others. I love having another passion other than my kids. I have so much fun creating and decorating cute and delicious cookies. </p>
       <p><a href="https://www.instagram.com/CuteandDelishbyKel/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
         <a href="https://www.facebook.com/cuteanddelishbykel/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
         <a href="https://cuteanddelishbykel.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
@@ -363,7 +375,7 @@
   <a name="lady">
   <h3>Ways to Give by Lady of Ways</h3>
     <div class="leftcolumnvendor"><img src="photos_mktlogos/ladyofways.jpg"></div>
-    <div class="rightcolumnvendor"><p></p>
+    <div class="rightcolumnvendor"><p class="left">Beautiful tags to put on all your gifts this holiday season!</p>
       <p><a href="https://www.etsy.com/shop/LadyOfWays?section_id=27475170"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
     </div>
 </div>
@@ -391,12 +403,12 @@
   <a name="maywe">
   <h3>May We Voyage</h3>
     <div class="leftcolumnvendor"><img src="photos_mktlogos/maywe.png" style="border: none;"></div>
-    <div class="rightcolumnvendor"><p>Mon amour of Paris began at an early age. My heritage is Parisian and at 6 months
+    <div class="rightcolumnvendor"><p class="left">Mon amour of Paris began at an early age. My heritage is Parisian and at 6 months
       old, I began my voyage to another life in Paris spending every summer and holiday exploring the beautiful city
       with my family. My mother and grandmother showed me the intricacies of la ville of Paris and the Parisian lifestyle.
       Sometimes we would enjoy fresh croissants, watching les marionettes in the many parks, other times we would while
       away the afternoon playing pétanque with reckless abandon.</p>
-      <p>My passion for my other home is something I look forward
+      <p class="left">My passion for my other home is something I look forward
       to sharing with families like yours, through my business May We Voyage. With my education and Parisian
       background I bring experience, knowledge, creativity and fluency in French so your guided tours will be an
       exceptional voyage. Allons-y!</p>
@@ -463,7 +475,13 @@
   <a name="ns">
   <h3>Nu Skin</h3>
     <div class="leftcolumnvendor"><img src="photos_mktlogos/nuskin.png" style="border: none;"></div>
-    <div class="rightcolumnvendor"><p class="left"></p>
+    <div class="rightcolumnvendor"><p class="left">Nu Skin has demonstrated a distinctively different
+      approach to business. It began with an innovative concept of premium quality
+      products and a uniquely compelling global business opportunity. Today, Nu Skin
+      is differentiated by its ability to demonstrate that they truly have the best
+      people, product, culture, and opportunity in the direct sales, skin care, and
+      wellness industries. As the premier anti-aging company, Nu Skin sets the standard.</p>
+      <p><a href="https://aliramstack.mynuskin.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
     </div>
 </div>
 
@@ -511,7 +529,7 @@
         <p><a href="https://www.instagram.com/thumbscookies/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
           <a href="https://www.facebook.com/ThumbsCookies/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
           <a href="https://www.thumbscookies.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
-      </div>
+      </div></div>
 
 <br>
 
@@ -528,6 +546,22 @@
       <a href="https://www.whowearefamily.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
   </div>
 </div>
+<br>
+<div class="row">
+  <a name="cbd">
+  <h3>Zilis CBD</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/zilis.png" style="border: none;"></div>
+    <div class="rightcolumnvendor"><p class="left">Zilis, pronounced /za-lease/, means 'multiplying nutrition' in Swahili.
+      We have taken that idea and made it a reality with our ULTRA brand. Our mission is to provide unlimited opportunity for our Ambassadors,
+      while our unique Pay It Forward program impacts those in need at home and abroad. Our brand provides complete endocannabinoid system
+      support, driving Zilis to become the fastest growing hemp-derived CBD company in the United States. Unlike others, Zilis is not influenced
+      by “big pharma” or Wall Street.</p>
+      <p><a href="https://www.facebook.com/groups/zilis.ambasador.CBD/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://www.zilis.com/rachelreeves/"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
+</div>
+
+<br>
 
   </div>
 
