--- a/2_market.html
+++ b/2_market.html
@@ -465,7 +465,7 @@
       sells jewelry and accessories handmade by artisans all over the globe.</p>
     <p><a href="https://www.instagram.com/noondaycollection/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
       <a href="https://www.facebook.com/noondaycollection/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
-      <a href="https://noondaycollection.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      <a href="https://kellihanson.noondaycollection.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
   </div>
 </div>
 
